5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4348/executions/1577_1330.log
== TEST (2019-03-18 20:59:55) 
-- CODE:
"main.py"
print(41)
-- OUTPUT:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 21:00:00) 
-- CODE:
"main.py"
print(41)
-- EXECUTION TIME:
0.161822
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 21:00:07) 
-- CODE:
"main.py"
print(42)
-- EXECUTION TIME:
0.221161
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 21:00:11) 
-- CODE:
"main.py"
print(42)
-- OUTPUT:
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 21:00:54) 
-- CODE:
"main.py"
round(41,6)
-- OUTPUT:
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 21:00:57) 
-- CODE:
"main.py"
round(41,6)
-- OUTPUT:
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 21:01:21) 
-- CODE:
"main.py"
print(round(41,6))
-- EXECUTION TIME:
0.137146
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 21:01:24) 
-- CODE:
"main.py"
print(round(41,6))
-- EXECUTION TIME:
0.138243
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 21:01:38) 
-- CODE:
"main.py"
print(round 41,6)
-- ERROR:
File "XXXX", line 2
    print(round 41,6)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 21:01:53) 
-- CODE:
"main.py"
round(41,6)
-- ERROR:
File "XXXX", line 2
    print(round 41,6)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 21:01:57) 
-- CODE:
"main.py"
round(41,6)
-- EXECUTION TIME:
0.15165
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 21:02:08) 
-- CODE:
"main.py"
round(41,6)
print(42)
-- OUTPUT:
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 21:02:12) 
-- CODE:
"main.py"
round(41,6)
print(42)
-- EXECUTION TIME:
0.160334
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 21:03:31) 
-- CODE:
"main.py"
print(round{41,66})
-- ERROR:
File "XXXX", line 2
    print(round{41,66})
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 21:03:35) 
-- CODE:
"main.py"
print(round{41,66})
-- EXECUTION TIME:
0.189878
-- ERROR:
  File "/home/codebench/codes/1577/1330/main.py", line 2
    print(round{41,66})
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 21:03:38) 
-- CODE:
"main.py"
print(round{41,66})
-- ERROR:
File "XXXX", line 2
    print(round{41,66})
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 21:03:52) 
-- CODE:
"main.py"
print(round 41,66)
-- ERROR:
File "XXXX", line 2
    print(round 41,66)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 21:03:58) 
-- CODE:
"main.py"
print(round 41,66)
-- EXECUTION TIME:
0.196082
-- ERROR:
  File "/home/codebench/codes/1577/1330/main.py", line 2
    print(round 41,66)
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 21:04:19) 
-- CODE:
"main.py"
print("round 41,66")
-- OUTPUT:
round 41,66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 21:04:23) 
-- CODE:
"main.py"
print("round 41,66")
-- EXECUTION TIME:
0.206457
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
round 41,66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 21:04:36) 
-- CODE:
"main.py"
print("round(41,66)")
-- OUTPUT:
round(41,66)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 21:04:40) 
-- CODE:
"main.py"
print("round(41,66)")
-- EXECUTION TIME:
0.19137
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
round(41,66)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 21:05:26) 
-- CODE:
"main.py"
print("round(41,66)")
-- OUTPUT:
round(41,66)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 21:05:34) 
-- CODE:
"main.py"
print("round(41,66)")
-- EXECUTION TIME:
0.203551
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
round(41,66)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 21:05:49) 
-- CODE:
"main.py"
print(round(41,66))
-- EXECUTION TIME:
0.143161
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 21:05:52) 
-- CODE:
"main.py"
print(round(41,66))
-- OUTPUT:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 21:06:24) 
-- CODE:
"main.py"
print("round")
-- OUTPUT:
round
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 21:06:37) 
-- CODE:
"main.py"
print("round 41,66")
-- OUTPUT:
round 41,66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 21:06:45) 
-- CODE:
"main.py"
print("round 41,6")
-- OUTPUT:
round 41,6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 21:06:59) 
-- CODE:
"main.py"
print("round(41,6)")
-- OUTPUT:
round(41,6)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 21:07:03) 
-- CODE:
"main.py"
print("round(41,6)")
-- EXECUTION TIME:
0.169747
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
round(41,6)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 21:10:55) 
-- CODE:
"main.py"
print(round(41,6))
-- OUTPUT:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 21:11:06) 
-- CODE:
"main.py"
print(round(41,6))
-- EXECUTION TIME:
0.184694
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:19:21) 
-- CODE:
"main.py"
print(round(250/6))
-- EXECUTION TIME:
0.200256
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:19:25) 
-- CODE:
"main.py"
print(round(250/6))
-- OUTPUT:
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:19:31) 
-- CODE:
"main.py"
print(round(250/6))
-- EXECUTION TIME:
0.130938
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:19:39) 
-- CODE:
"main.py"
print(round(250/6))
-- EXECUTION TIME:
0.136716
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:20:13) 
-- CODE:
"main.py"
print(round(250/6))
-- EXECUTION TIME:
0.151548
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:20:25) 
-- CODE:
"main.py"
print(round(250/6))
-- EXECUTION TIME:
0.162369
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:20:26) 
-- CODE:
"main.py"
print(round(250/6))
-- OUTPUT:
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:23:19) 
-- CODE:
"main.py"
print(round(250/6))
-- EXECUTION TIME:
0.142859
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:26:25) 
-- CODE:
aresta = 5
area = 3/2*3*0,5*5**2
print(round(area, 4))
-- EXECUTION TIME:
0.140452
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1577/1330/main.py", line 3, in <module>
    print(round(area, 4))
TypeError: type tuple doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:26:30) 
-- CODE:
aresta = 5
area = 3/2*3*0,5*5**2
print(round(area, 4))
-- EXECUTION TIME:
0.135899
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1577/1330/main.py", line 3, in <module>
    print(round(area, 4))
TypeError: type tuple doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:27:16) 
-- CODE:
aresta = 5
area = 3/2*3*0,5*5**2
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(area, 4))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:27:38) 
-- CODE:
"main.py"
aresta = 5
area = 3/2*3*0,5*5**2
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(area, 4))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:28:11) 
-- CODE:
aresta = 5
area = 3/2*3*0,5*5**2
"main.py"
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(area, 4))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:28:31) 
-- CODE:
"main.py"
aresta = 5
area = 3/2*3*0,5*5**2
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(area, 4))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:29:46) 
-- CODE:
"main.py"
aresta = 5
area = 3/2*3*0,5*5**2
<print(round(area, 4))>
-- ERROR:
File "XXXX", line 4
    <print(round(area, 4))>
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:33:20) 
-- CODE:
"main.py"
aresta = 5
area = 3/2*3*0,5*5**2
print(round(area, 4)
-- ERROR:
File "XXXX", line 5
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:33:47) 
-- CODE:
"main.py"
aresta = 5
area = 3/2*3*0,5*5**2
print(round(area, 4)
"main.py"
-- ERROR:
File "XXXX", line 5
    "main.py"
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:34:19) 
-- CODE:
"main.py"
aresta = 5
area = 3/2*3*0,5*5**2
print(round(area, 4)

-- ERROR:
File "XXXX", line 5
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:34:50) 
-- CODE:
"main.py"
aresta = 5
area = 3/2*3*0,5*5**2
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(area, 4))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:35:26) 
-- CODE:
aresta = 5
area = 3/2*3*0,5*5**2
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(area, 4))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:35:32) 
-- CODE:
aresta = 5
area = 3/2*3*0,5*5**2
print(round(area, 4))
-- EXECUTION TIME:
0.154655
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1577/1330/main.py", line 3, in <module>
    print(round(area, 4))
TypeError: type tuple doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:35:34) 
-- CODE:
aresta = 5
area = 3/2*3*0,5*5**2
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(area, 4))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:36:19) 
-- CODE:
aresta = 5
area = 3/2*3*0,5*5**2
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(area, 4))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:36:44) 
-- CODE:
aresta = 5
area = 3/2*3*0,5*5**2
print round(area, 4)
-- ERROR:
File "XXXX", line 3
    print round(area, 4)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:37:12) 
-- CODE:
aresta = 5
area = 3/2*3*0,5*5**2
print ("round(area, 4)")
-- OUTPUT:
round(area, 4)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:37:19) 
-- CODE:
aresta = 5
area = 3/2*3*0,5*5**2
print ("round(area, 4)")
-- EXECUTION TIME:
0.257184
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
round(area, 4)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:37:21) 
-- CODE:
aresta = 5
area = 3/2*3*0,5*5**2
print ("round(area, 4)")
-- OUTPUT:
round(area, 4)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:37:32) 
-- CODE:
aresta = 5
area = 3/2*3*0,5*5**2
print ("round"(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print ("round"(area, 4))
TypeError: 'str' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:38:21) 
-- CODE:
aresta = 5
area = 3/2*3*0,5*5**2
"main.py"
print (round(area, 4))
-- EXECUTION TIME:
0.19467
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1577/1330/main.py", line 4, in <module>
    print (round(area, 4))
TypeError: type tuple doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:38:23) 
-- CODE:
aresta = 5
area = 3/2*3*0,5*5**2
"main.py"
print (round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print (round(area, 4))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:38:51) 
-- CODE:
"main.py"
aresta = 5
area = 3/2*3*0,5*5**2
<>
print (round(area, 4))
-- ERROR:
File "XXXX", line 4
    <>
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:39:00) 
-- CODE:
"main.py"
aresta = 5
area = 3/2*3*0,5*5**2
print (round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print (round(area, 4))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:39:25) 
-- CODE:
"main.py"
aresta = 5
area = 3//2*3*0,5*5**2
print (round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print (round(area, 4))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:39:30) 
-- CODE:
"main.py"
aresta = 5
area = 3//2*3*0,5*5**2
print (round(area, 4))
-- EXECUTION TIME:
0.118187
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1577/1330/main.py", line 4, in <module>
    print (round(area, 4))
TypeError: type tuple doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:39:36) 
-- CODE:
"main.py"
aresta = 5
area = 3/2*3*0,5*5**2
print (round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print (round(area, 4))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:40:09) 
-- CODE:
"main.py"
aresta = 5
area = 3/2*3**0,5*5**2
print (round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print (round(area, 4))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:40:12) 
-- CODE:
"main.py"
aresta = 5
area = 3/2*3**0,5*5**2
print (round(area, 4))
-- EXECUTION TIME:
0.150965
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1577/1330/main.py", line 4, in <module>
    print (round(area, 4))
TypeError: type tuple doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:40:38) 
-- CODE:
"main.py"
aresta = 5
area = 3/2*3**0,5*5**2
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(area, 4))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:41:14) 
-- CODE:
"main.py"
aresta=5
area=3/2*3**0,5*5**2
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(area, 4))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:41:20) 
-- CODE:
"main.py"
aresta=5
area=3/2*3**0,5*5**2
print(round(area, 4))
-- EXECUTION TIME:
0.166494
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1577/1330/main.py", line 4, in <module>
    print(round(area, 4))
TypeError: type tuple doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:41:22) 
-- CODE:
"main.py"
aresta=5
area=3/2*3**0,5*5**2
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(area, 4))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:41:34) 
-- CODE:
"main.py"
aresta = 5
area = 3/2*3**0,5*5**2
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(area, 4))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:46:53) 
-- CODE:
"main.py"
aresta = 5
area = 3/2*3**0,5*5**2

print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(area, 4))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:46:56) 
-- CODE:
"main.py"
aresta = 5
area = 3/2*3**0,5*5**2

print(round(area, 4))
-- EXECUTION TIME:
0.123391
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1577/1330/main.py", line 5, in <module>
    print(round(area, 4))
TypeError: type tuple doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:47:05) 
-- CODE:
aresta = 5
area = 3/2*3**0,5*5**2

print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(area, 4))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:47:09) 
-- CODE:
aresta = 5
area = 3/2*3**0,5*5**2

print(round(area, 4))
-- EXECUTION TIME:
0.146554
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1577/1330/main.py", line 4, in <module>
    print(round(area, 4))
TypeError: type tuple doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:47:10) 
-- CODE:
aresta = 5
area = 3/2*3**0,5*5**2

print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(area, 4))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:49:45) 
-- CODE:
aresta = 5
area = 3/2*3**0,5*5**2
print(round(area, 4))
42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(area, 4))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:49:48) 
-- CODE:
aresta = 5
area = 3/2*3**0,5*5**2
print(round(area, 4))
42
-- EXECUTION TIME:
0.189448
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1577/1330/main.py", line 3, in <module>
    print(round(area, 4))
TypeError: type tuple doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:49:50) 
-- CODE:
aresta = 5
area = 3/2*3**0,5*5**2
print(round(area, 4))
42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(area, 4))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:55:51) 
-- CODE:
aresta = 5
area = 3/2*3**0,5*5**2
print(round(area, 4))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(area, 4))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:57:48) 
-- CODE:
aresta = 5
area = 3/2*3**0,5*5**2
print(round(area. 4))
-- ERROR:
File "XXXX", line 3
    print(round(area. 4))
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 14:44:12) 
-- CODE:
aresta = 5
area = 3/2*3**0,5*5**2
print(round(area. 4))
-- ERROR:
File "XXXX", line 3
    print(round(area. 4))
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 14:50:43) 
-- CODE:
aresta = 5
area = 3/2*3**0,5*5**2
print("round(area. 4)")
-- OUTPUT:
round(area. 4)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 14:50:51) 
-- CODE:
aresta = 5
area = 3/2*3**0,5*5**2
print("round(area. 4)")
-- EXECUTION TIME:
0.157264
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
round(area. 4)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 14:51:11) 
-- CODE:
aresta = 5
area = 3/2*3**0,5*5**2
print("round(area. 2)")
-- OUTPUT:
round(area. 2)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 14:51:16) 
-- CODE:
aresta = 5
area = 3/2*3**0,5*5**2
print("round(area. 2)")
-- EXECUTION TIME:
0.151241
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
round(area. 2)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 14:54:57) 
-- CODE:
"main.py"
print("round(41,66. 4)")
-- OUTPUT:
round(41,66. 4)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 14:55:04) 
-- CODE:
"main.py"
print("round(41,66. 4)")
-- EXECUTION TIME:
0.161455
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
round(41,66. 4)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 14:55:27) 
-- CODE:
"main.py"
260/6
print("round(41,66. 4)")
-- OUTPUT:
round(41,66. 4)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 14:55:32) 
-- CODE:
"main.py"
260/6
print("round(41,66. 4)")
-- EXECUTION TIME:
0.117099
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
round(41,66. 4)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 14:56:02) 
-- CODE:
"main.py"
260/6
print("round(41,66. 2)")
-- OUTPUT:
round(41,66. 2)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 14:56:10) 
-- CODE:
"main.py"
260/6
print("round(41,66, 2)")
-- OUTPUT:
round(41,66, 2)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 14:58:52) 
-- CODE:
aresta = 5
area = 3/2*3**0,5*5**2
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(area, 4))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 14:59:08) 
-- CODE:
aresta = 5
area = 3/2*3**0,5*5**2
print(round(area. 4))
-- ERROR:
File "XXXX", line 3
    print(round(area. 4))
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 14:59:25) 
-- CODE:
aresta = 5
area = 3/2*3**0,5*5**2
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(area, 4))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:19:42) 
-- CODE:
aresta = 5
area = 3/2*3**0,5*5**2
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(area, 4))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:21:26) 
-- CODE:
aresta = 5
area = 3/2*3**0,5*5**2
print(round(area, 4)  )
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(area, 4)  )
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:21:50) 
-- CODE:
aresta = 5
area = 3/2*3**0.5*5**2
print(round(area, 4)  )
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:21:56) 
-- CODE:
aresta = 5
area = 3/2*3**0.5*5**2
print(round(area, 4)  )
-- EXECUTION TIME:
0.227274
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
64.9519
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:22:04) 
-- CODE:
aresta = 5
area = 3/2*3**0.5*5**2
print(round(area, 4))
-- EXECUTION TIME:
0.155617
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
64.9519
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:22:08) 
-- CODE:
aresta = 5
area = 3/2*3**0.5*5**2
print(round(area, 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:22:13) 
-- CODE:
aresta = 5
area = 3/2*3**0.5*5**2
print(round(area, 4))
-- EXECUTION TIME:
0.211744
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
64.9519
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
